--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "start": "node ./src/index"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
-    "express": "~4.16.1",
+    "express": "^4.19.2",
+    "hbs": "^4.2.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^8.5.2",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
