--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "start": "node ./src/index"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "hbs": "^4.2.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.5.2",
